tests/baselines/reference/moduleSymbolMerging(strict=true).errors.txt
B.ts(4,29): error TS2322: Type 'null' is not assignable to type 'I'.


==== B.ts (1 errors) ====
    ///<reference path="A.ts" preserve="true" />
    module A { ; }
    module B {
    	export function f(): A.I { return null; }
    	                           ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'I'.
    }
    
    
==== A.ts (0 errors) ====
    module A { export interface I {} }
    